Try to fix overflow on ios

--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,7 @@ html {
   user-select: none;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
 }
 
 /* Ton-Connect modal */
